@@ -1,3 +1,5 @@
+- NEW: Allow changing the alpha value in overlapped mode in TortoiseIDiff
+       to be changed with Ctrl+Shift+Wheel. (Stefan)
 - CHG: Switched files are only shown in the check-for-modifications
        dialog and not in e.g. the commit/revert/add dialog if they're
        not modified. (Stefan)
